--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,7 @@ input, select, textarea {
 
 	body {
 		background-color: #935d8c;
-		background-image: linear-gradient(45deg, #00F260 35%, #0575E6 65%);
+		background-image: linear-gradient(45deg, #0575E6 35%, #00F260 65%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
