--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3543,10 +3543,10 @@ input, select, textarea {
 
 		#main header.major h2:after {
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(45deg, #00F260 85%, #0575E6 15%);
+			background-image: -webkit-linear-gradient(45deg, #00F260 85%, #0575E6 15%);
+			background-image: -ms-linear-gradient(45deg, #00F260 85%, #0575E6 15%);
+			background-image: linear-gradient(45deg, #00F260 85%, #0575E6 15%);
 		}
 
 		#main table tbody tr {
