--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2786,10 +2786,10 @@ input, select, textarea {
 		}
 		#main header.major h2:after {
 			background-color: #dddddd;
-			background-image: -moz-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -webkit-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: -ms-linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
-			background-image: linear-gradient(90deg, #efa8b0, #a89cc8, #8cc9f0);
+			background-image: -moz-linear-gradient(90deg, #00ba13, #00ba85, #0069ba);
+			background-image: -webkit-linear-gradient(90deg, #00ba13, #00ba85, #0069ba);
+			background-image: -ms-linear-gradient(90deg, #00ba13, #00ba85, #0069ba);
+			background-image: linear-gradient(90deg, #00ba13, #00ba85, #0069ba);
 		}
 		#main table tbody tr {
 			border-color: #dddddd;
