--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2270,7 +2270,7 @@ input, select, textarea {
 				background-color: #00aaba;
 			}
 			.statistics li.style5 {
-				background-color: #0069ba;
+				background-color: 008cba;
 			}
 			.statistics li strong, .statistics li b {
 				display: block;
