--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,8 +79,8 @@ input, select, textarea {
 	}
 
 	body {
-		background-color: linear-gradient(45deg, #00F260 35%, #0575E6 65%);
-		background-image: linear-gradient(45deg, #00F260 35%, #0575E6 65%);
+		background-color: linear-gradient(45deg, #0575E6 35%, #00F260 65%);
+		background-image: linear-gradient(45deg, #05736 35%, #00F260 65%);
 	}
 
 		body.is-preload *, body.is-preload *:before, body.is-preload *:after {
