--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -95,7 +95,7 @@ input, select, textarea {
 		}
 /* Type */
 	body {
-		background-color: linear-gradient(45deg, #00F260 35%, #0575E6 65%);
+		background-color: linear-gradient(45deg, #0575E6 35%, #00F260 65%);
 		color: rgba(255, 255, 255, 0.65);
 	}
 	body, input, select, textarea {
